src/app/index.scss
/**
 *  If you want to override some bootstrap variables, you have to change values here.
 *  The list of variables are listed here bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss
 */
$navbar-inverse-link-color: #5AADBB;
$icon-font-path: "../../bootstrap-sass/assets/fonts/bootstrap/";
$brand-primary: rgb(66, 159, 218);
$transition-timing: 200ms;

/**
 *  Do not remove the comments below. It's the markers used by wiredep to inject
 *  sass dependencies when defined in the bower.json of your dependencies
 */
// bower:scss
// endbower

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

.thumbnail {
  height: 200px;

  img.pull-right {
    width: 50px;
  }
}

.contact-list-header {
  .title {
    color: $brand-primary;
    float: left;
    padding-left: 10px;
  }
  .expand-toggle {
    float: right;
    cursor: pointer;
    padding-top: 24px;

    &:focus {
      outline: 0;
    }

    .toggle-label {
      display: inline-block;
      vertical-align: super;
      color: $gray-light;
    }
  }

  .icon {
    display: inline-block;
    position: relative;
    height: 20px;
    width: 20px;
    border-radius: 3px;
    border: 1px solid $gray-light;
    .one { transform: translate(-50%, -50%); }
    .two { transform: translate(-50%, -50%) rotate(90deg); }
    &.rotate {
      .one { transform: translate(-50%, -50%) rotate(-180deg); }
      .two { transform: translate(-50%, -50%) rotate(0deg); }
    }
    .bar {
      transition: $transition-timing all ease-out;
      position: absolute;
      height: 2px;
      width: 15px;
      background-color: $gray-light;
      top: 50%;
      left: 50%;
    }
  }
}
.contact-list-wrapper {
  transition: $transition-timing all ease-out;
  max-height: 500px;
  overflow: hidden;

  &.collapsed {
    max-height: 0px;
  }

  .description {
    color: $gray-light;
    padding-bottom: 20px;
    padding-left: 10px;
  }
}

/**
 *  Do not remove the comments below. It's the markers used by gulp-inject to inject
 *  all your sass files automatically
 */
// injector
// endinjector

